crates/jarl-core/src/lints/base/for_loop_index/snapshots/jarl_core__lints__base__for_loop_index__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/base/for_loop_index/mod.rs
expression: "get_fixed_text(vec![\"for (x in x) {}\",], \"for_loop_index\", None)"
---
OLD:
====
for (x in x) {}
NEW:
====
for (x in x) {}
