crates/jarl-core/src/lints/base/for_loop_index/snapshots/jarl_core__lints__base__for_loop_index__tests__for_loop_index_diagnostic_ranges-2.snap
---
source: crates/jarl-core/src/lints/base/for_loop_index/mod.rs
expression: "snapshot_lint(\"for (x in foo(\\nx\\n)) { TRUE }\")"
---
warning: for_loop_index
 --> <test>:1:6
  |
1 |   for (x in foo(
  |  ______-
2 | | x
3 | | )) { TRUE }
  | |_- Don't re-use any sequence symbols as the index symbol in a for loop.
  |
Found 1 error.
